# PortfolioWebsite

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  database.db  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: test.yml
app/: pyproject.toml
app/src/app/: __about__.py  __init__.py  main.py
frontend/.next/: trace
frontend/portfoliowebsite/: .env.local  next.config.ts  package-lock.json  package.json
frontend/portfoliowebsite/pages/: _app.js  about.js  aboutfred.js  aboutwebsite.js  addelement.js  contact.js  contactfred.js  home.js  homefred.js  login.js  projects.js  projectsfred.js  register.js  registration.js  welcome.js
frontend/portfoliowebsite/src/app/components/: Footer.js  Header.js  ProjectCard.js
frontend/portfoliowebsite/src/app/pages/: _app.js  about.js  contact.js  projects.js
frontend/portfoliowebsite/utils/: axios.js
portfoliowebsite/: .pre-commit-config.yaml  LICENSE.txt  README.md
portfoliowebsite/src/: database.db
portfoliowebsite/src/portfoliowebsite/: __about__.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
portfoliowebsite/src/portfoliowebsite/core/: auth.py  config.py  database.py  security.py
portfoliowebsite/src/portfoliowebsite/routers/: __init__.py  _init_.py  auth.py  category.py  portfolio.py
portfoliowebsite/src/portfoliowebsite/schemas/: __init__.py  category.py  portfolio.py  token.py  transaction.py  user.py
portfoliowebsite/src/portfoliowebsite/services/: category.py  portfolio.py  transaction.py  user.py
portfoliowebsite/tests/: .env  test_auth.py  test_crud.py  test_main.py  test_portfolio.py
